--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -5,12 +5,12 @@
     </h1>
     <!-- <img src="/train/assets/train.png" alt="testx" class="invert" /> -->
   </div>
-  <div class="flex flex-col py-4 justify-center items-center gap-0 bg-zinc-800 text-lg font-medium">
+  <div class="flex flex-col py-4 justify-center items-center gap-0 bg-zinc-800 text-md font-fine">
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/index.php">Dashboard</a>
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddTrains.php"
       >Add Train</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Sign Up</a>
+    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php">Sign Up</a>
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Register</a>
   </div>
 </aside>
