Add train and station management forms with input validation and database integration

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -8,7 +8,10 @@
   <div class="flex flex-col py-4 justify-center items-center gap-0 bg-zinc-800 text-md font-fine">
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/index.php">Dashboard</a>
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddTrains.php"
-      >Add Train</a
+      >Add Trains</a
+    >
+    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddStations.php"
+      >Add Stations</a
     >
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php">Sign Up</a>
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Register</a>
