--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -13,6 +13,9 @@
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddStations.php"
       >Add Stations</a
     >
+    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/Routes.php"
+      >Add Routes</a
+    >
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php">Sign Up</a>
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Register</a>
   </div>
