Add Book Ticket component with form for ticket booking and input validation

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -16,7 +16,12 @@
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/Routes.php"
       >Add Routes</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php">Sign Up</a>
+    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/BookTicket.php"
+      >Book Ticket</a
+    >
+    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php"
+      >Sign Up</a
+    >
     <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Register</a>
   </div>
 </aside>
