Add SeatAvailable component, update header with Lottie animations, and enhance sidebar styling

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -1,27 +1,45 @@
-<aside class="bg-black text-white h-screen w-[20%]">
+<nav class="">
   <div class="flex justify-center w-full py-5 border-b-2 border-gray-500">
     <h1 class="text-2xl font-bold flex tracking-wide">
-      BookMy <span class="bg-blue-500 px-1 flex items-center">Train</span>
+      BookMy<span class="bg-[#0055A5] px-1 flex items-center text-[#F5F5F5]">Train</span>
     </h1>
     <!-- <img src="/train/assets/train.png" alt="testx" class="invert" /> -->
   </div>
-  <div class="flex flex-col py-4 justify-center items-center gap-0 bg-zinc-800 text-md font-fine">
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/index.php">Dashboard</a>
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddTrains.php"
+  <div
+    class="flex py-4 justify-center items-center gap-1 bg-[#F5F5F5] text-[#37474F] text-md font-fine"
+  >
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/index.php"
+      >Dashboard</a
+    >
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/AddTrains.php"
       >Add Trains</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/AddStations.php"
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/AddStations.php"
       >Add Stations</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/Routes.php"
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/Routes.php"
       >Add Routes</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/BookTicket.php"
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/BookTicket.php"
       >Book Ticket</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="/train/src/components/SignUp.php"
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/SignUp.php"
       >Sign Up</a
     >
-    <a class="hover:bg-zinc-700 w-full px-10 py-2" href="">Register</a>
+    <a class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1" href=""
+      >Register</a
+    >
   </div>
-</aside>
+</nav>
