--- a/constant/header.html
+++ b/constant/header.html
@@ -10,6 +10,8 @@
   />
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
 
   
