Refactor SignUp component into CreateAccount, update database name, and modify sidebar links

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -35,11 +35,11 @@
     >
     <a
       class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
-      href="/train/src/components/SignUp.php"
+      href="/train/src/components/CreateAccount.php"
       >Sign Up</a
     >
     <a class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1" href=""
-      >Register</a
+      >Login</a
     >
   </div>
 </nav>
