Add Login component with form validation and error handling

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -38,7 +38,9 @@
       href="/train/src/components/CreateAccount.php"
       >Sign Up</a
     >
-    <a class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1" href=""
+    <a
+      class="border-b-2 border-transparent hover:border-[#0055A5] w-full px-10 py-1"
+      href="/train/src/components/Login.php"
       >Login</a
     >
   </div>
