Add logout functionality, update sidebar styling, and implement PHPMailer setup

--- a/constant/sidebar.html
+++ b/constant/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="">
+<nav class="bg-[#F5F5F5]">
   <div class="flex justify-center w-full py-5 border-b-2 border-gray-500">
     <h1 class="text-2xl font-bold flex tracking-wide">
       BookMy<span class="bg-[#0055A5] px-1 flex items-center text-[#F5F5F5]">Train</span>
